[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/components/joypad_remap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/components/keyboard_mouse_remap.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/1x/checkmark.png" type="Texture" id=3]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/1x/return.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/menus/remap_menu.gd" type="Script" id=5]

[node name="remap_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
custom_constants/separation = 20

[node name="button_back" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 1487.0
margin_right = 1820.0
margin_bottom = 60.0
size_flags_horizontal = 8
text = "BUTTON_BACK"
icon = ExtResource( 4 )

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="keyboard_mouse_section" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
size_flags_horizontal = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/keyboard_mouse_section"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1795.0
margin_bottom = 825.0

[node name="keyboard_mouse_remap" parent="MarginContainer/VBoxContainer/TabContainer/keyboard_mouse_section/ScrollContainer" instance=ExtResource( 2 )]

[node name="controller_section" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
size_flags_horizontal = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/controller_section"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1795.0
margin_bottom = 825.0
custom_constants/separation = 20

[node name="controller_section_scroll_container" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1770.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer/controller_section_scroll_container"]
margin_right = 1720.0
margin_bottom = 944.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer/controller_section_scroll_container/CenterContainer"]
margin_left = 238.0
margin_right = 1481.0
margin_bottom = 944.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="joypad" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer/controller_section_scroll_container/CenterContainer/MarginContainer" instance=ExtResource( 1 )]
margin_top = 20.0
margin_bottom = 924.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer"]
margin_left = 517.0
margin_top = 740.0
margin_right = 1252.0
margin_bottom = 800.0
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="button_save" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer/HBoxContainer"]
margin_right = 331.0
margin_bottom = 60.0
text = "BUTTON_SAVE"
icon = ExtResource( 3 )

[node name="button_reset" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/controller_section/VBoxContainer/HBoxContainer"]
margin_left = 381.0
margin_right = 735.0
margin_bottom = 60.0
size_flags_horizontal = 4
text = "BUTTON_RESET"
icon = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/button_back" to="." method="_on_button_back_pressed"]
